feat: Validate requests and responses against OpenAPI specification
Close #31